--- a/http/index-2.html
+++ b/http/index-2.html
@@ -101,7 +101,7 @@
       </div>
       <div class="grid_5">
         <h2>Contact us online</h2>
-        <iframe src="https://web-beta.ccsteam.ru/#/chats/060e0266-b17f-4915-8a49-7384a888e465" style="border: 1px #d8d8d8 solid; width: 100%; height: 600px; overflow: hidden;" scrolling="no"></iframe>
+        <iframe src="https://web-beta.ccsteam.ru/#/chats/060e0266-b17f-4915-8a49-7384a888e465" style="border: 1px #d8d8d8 solid; width: 400px; height: 600px; overflow: hidden;"; scrolling="no"></iframe>
       </div> 
     </div>
   </div>
