--- a/http/index.html
+++ b/http/index.html
@@ -131,7 +131,7 @@
       </div>
       <div class="grid_4">
         <div class="block1">
-          <div class="count">1.</div>
+          <div class="count">1</div>
           Vivamus at magna non nunc tristique rhoncus. Aliquam nibh ante, egestas id dictum a, commodo. Praesent faucibus malesuada faucibus. Donec laeet metus id laoreet malesuadarem ipsum dolor 
           <br>
           <a href="#" class="btn">more</a>
@@ -139,7 +139,7 @@
       </div>
       <div class="grid_4">
         <div class="block1">
-          <div class="count">2.</div>
+          <div class="count">2</div>
           Dasamus at magna non nunc tristique rhoncus. Kliquam nibh ante, egestas id dictum a, commodo. Praesent faucibus malesuada faucibus. Donec laeet metus id laoreet malesuadarem ipsumer 
           <br>
           <a href="#" class="btn">more</a>
@@ -147,7 +147,7 @@
       </div>
       <div class="grid_4">
         <div class="block1">
-          <div class="count">3.</div>
+          <div class="count">3</div>
           Tervamus at magna non nunc tristique rhoncus. Oliquam nibh ante, egestas id dictum a, commodo. Iraesent faucibus malesuada faucibus. Donec laeet etus id laoreet malesuadarem ipsolo 
           <br>
           <a href="#" class="btn">more</a>
