--- a/http/index.html
+++ b/http/index.html
@@ -240,7 +240,7 @@
 
 
 <div class="message-div" id="message-div">
-  <iframe src="https://web-beta.ccsteam.ru/#/chats/3931a351-8c68-5873-a92f-89dcce936a88" scrolling="no"></iframe>
+  <iframe src="https://web-beta.ccsteam.ru/#/chats/3931a351-8c68-5873-a92f-89dcce936a88" scrolling="no" allow="fullscreen"></iframe>
 </div>
 <div class="message-btn" id="message-btn">
   <img src="images/msg.svg" alt="Message" />
