--- a/http/index-2.html
+++ b/http/index-2.html
@@ -101,7 +101,7 @@
       </div>
       <div class="grid_5">
         <h2>Contact us online</h2>
-        <iframe src="https://web-beta.ccsteam.ru/#/chats/956e62d1-85c1-5b87-ad6e-06acc18267a5" style="border: 1px #d8d8d8 solid; width: 100%; height: 600px; overflow: hidden;"; scrolling="no"></iframe>
+        <iframe src="https://web-beta.ccsteam.ru/#/chats/956e62d1-85c1-5b87-ad6e-06acc18267a5" style="border: 1px #d8d8d8 solid; width: 100%; height: 600px; overflow: hidden;"; scrolling="no" allow="fullscreen"></iframe>
       </div> 
     </div>
   </div>
