--- a/http/web-ios.html
+++ b/http/web-ios.html
@@ -64,7 +64,7 @@
 </head>
 <body>
   <div class="form">
-    <input type="text" id="input" class="form__input" value="Lipetsk" />
+    <input type="text" id="input" class="form__input" value="" />
     <button class="form__button" onclick="sendCityName()">Get weather</button>
   </div>
   <div class="weather" id="weather">
@@ -73,8 +73,8 @@
     <div class="weather__temp"><span id="temp">...</span> °C</div>
     <div class="weather__caption" id="caption">...</div>
   </div>
-  
-    <script>
+
+  <script>
     function getCityName() {
       return document.getElementById('input').value;
     }
@@ -89,9 +89,9 @@
     
     function handleWeatherResponse(cities) {
       const data = cities && cities.length && cities[0]
-      const iconUrl = `https://developer.accuweather.com/sites/default/files/${String(data.WeatherIcon).padStart(2, '0')}-s.png`;
-      const temperature = data.Temperature.Metric.Value;
-      const caption = data.WeatherText;
+      const iconUrl = `https://developer.accuweather.com/sites/default/files/${String(data.weatherIcon).padStart(2, '0')}-s.png`;
+      const temperature = data.temperature.metric.value;
+      const caption = data.weatherText;
 
       document.getElementById('city').innerText = getCityName();
       document.getElementById('temp').innerText = temperature;
