New embedded demo

--- a/http/index-2.html
+++ b/http/index-2.html
@@ -18,7 +18,7 @@
 <script src="js/jquery.easing.1.3.js"></script>
 <script src="js/tmStickUp.js"></script>
 <script src="js/jquery.ui.totop.js"></script>
-    <script src="booking/js/booking.js"></script>
+<script src="booking/js/booking.js"></script>
 
 <script>
  $(document).ready(function(){
@@ -83,14 +83,16 @@
   <div class="container">
     <div class="row">
       <div class="grid_7">
+        <h2>Contact us online</h2>
+        <iframe src="https://web-alpha.ccsteam.ru/#/chats/956e62d1-85c1-5b87-ad6e-06acc18267a5" style="border: 1px #d8d8d8 solid; width: 100%; height: 600px; overflow: hidden;"; scrolling="no" allow="fullscreen"></iframe>
+      </div> 
+      <div class="grid_5">
         <h2>Reserve Your Table</h2>
-        <img src="images/page3_img1.jpg" alt="" class="img_inner fleft inn__1">
-        <div class="extra_wrapper">
-          <div class="text1 tx__1"><a href="#">Vivamus at magna non nunc </a></div>
-          <p>Rehoncus. Aliquam nibh antegestas id ictum ado. Praesenterto faucibus maleada faucibusnec laeetert metus id laoreet </p>
-          <p>Nullam consectetur orci sed nulla facilisisequaterto. Curabitur vel lorem sit amet nulla perermentum. Aliquam nibh ante, egestas id dictum a, commodo luctus libero.</p>
-          Praesent faucibus malesuada faucibus. Donecertolin laoreet metus id laoreet malesuada.  orem ipsum dolor sit amet, consectetur adipiscing elit. 
-        </div>
+        <img src="images/page3_img1.jpg" alt="" class="img_inner inn__1">
+        <div class="text1 tx__1"><a href="#">Vivamus at magna non nunc </a></div>
+        <p>Rehoncus. Aliquam nibh antegestas id ictum ado. Praesenterto faucibus maleada faucibusnec laeetert metus id laoreet </p>
+        <p>Nullam consectetur orci sed nulla facilisisequaterto. Curabitur vel lorem sit amet nulla perermentum. Aliquam nibh ante, egestas id dictum a, commodo luctus libero.</p>
+        Praesent faucibus malesuada faucibus. Donecertolin laoreet metus id laoreet malesuada.  orem ipsum dolor sit amet, consectetur adipiscing elit. 
         <div class="clear"></div>
         <h2>Useful Information</h2>
         <div class="text1 tx__1"><a href="#">Hivamus at magna non nuncerto limonit nelowert sedrolino. Integer convallis orci vel miеter laoreet, at ornare lorem consequat. Phasellus erat nisl, auctor vel velit sed.</a></div>
@@ -99,10 +101,6 @@
         Praesent faucibus malesuada faucibus. Donec laoreet metus id laoreet malesuada. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam consectetur orci sed nulla facilisis consequat. Curabitur vel lorem sit amet nulla ullamcorper fermentum. In vitae varius augue, eu consectetur ligula. <br>
         <a href="#" class="btn">more</a>
       </div>
-      <div class="grid_5">
-        <h2>Contact us online</h2>
-        <iframe src="https://web-beta.ccsteam.ru/#/chats/956e62d1-85c1-5b87-ad6e-06acc18267a5" style="border: 1px #d8d8d8 solid; width: 100%; height: 600px; overflow: hidden;"; scrolling="no" allow="fullscreen"></iframe>
-      </div> 
     </div>
   </div>
 </section>
